--- a/index.html
+++ b/index.html
@@ -22,13 +22,36 @@
     </div>
     <div class="container">
         <div class="intro">
-            <h1 class="title glitch" data-text="BONJOUR A TOUS" title="BONJOUR A TOUS">BONJOUR A TOUS</h1>
-            <p>Proin ac quam et lectus vestibulum bandit. Nunc maximus nibh at placerat 
-                tincidunt. Nam sem lacus, ornare nonte sed, ultricies fringilla massa.
-                <br><br>
-                Sem risus tincidunt diam, vitae sodales diam ipsum vitae purus. Fusce tristique erat nulla, vel viverra mi auctor non. 
-                Integer ante lorem, dictum at felis at, bibendum egestas augue. Aenean 
-                vestibulum lacus dolor</p>
+            <!-- header -->
+            <header>
+                <h2>Hector b.</h2>
+            </header>
+            <!-- intro -->
+            <div class="center">
+                <h1 class="title glitch" data-text="BONJOUR A TOUS" title="BONJOUR A TOUS">BONJOUR A TOUS</h1>
+                <p>Proin ac quam et lectus vestibulum bandit. Nunc maximus nibh at placerat 
+                    tincidunt. Nam sem lacus, ornare nonte sed, ultricies fringilla massa.
+                    <br><br>
+                    Sem risus tincidunt diam, vitae sodales diam ipsum vitae purus. Fusce tristique erat nulla, vel viverra mi auctor non. 
+                </p>
+                <button class="border white">Voir mes projets</button>
+            </div>
+            <!-- links -->
+            <div class="links">
+                <div class="scroll">
+                    <div class="line"></div>
+                    <p>scroll down</p>
+                </div>
+                <div class="socials">
+
+                </div>
+            </div>
+        </div>
+
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus minus, iste in accusantium praesentium quo recusandae odio molestias aliquid maiores.
+            <br><br><br><br><br><br>
+            ÒLorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus minus, iste in accusantium praesentium quo recusandae odio molestias aliquid maiores.
         </div>
     </div>
 </body>
