--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hector bidan</title>
     <!------------------------ CSS ------------------------>
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- main -->
     <link rel="stylesheet" href="assets/styles/css/main.css">
     <!-- loader -->
@@ -14,7 +16,8 @@
     <link rel="stylesheet" href="assets/styles/css/intro.css">
 
     <!------------------------ JS ------------------------>
-    <script src="assets/js/main.js" defer></script>
+    <script src="assets/js/loader.js" defer></script>
+    <script src="assets/js/scrollbar.js" defer></script>
 </head>
 <body>
     <div class="loader-container enabled">
@@ -47,11 +50,10 @@
                 </div>
             </div>
         </div>
-
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus minus, iste in accusantium praesentium quo recusandae odio molestias aliquid maiores.
-            <br><br><br><br><br><br>
-            ÒLorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus minus, iste in accusantium praesentium quo recusandae odio molestias aliquid maiores.
+        <div class="scrollbar">
+            <div id="top" class="line"></div>
+            <i class="fas fa-arrow-down" id="scroll-arrow"></i>
+            <div id="bottom" class="line"></div>
         </div>
     </div>
 </body>
