--- a/index.html
+++ b/index.html
@@ -11,50 +11,71 @@
     <!-- main -->
     <link rel="stylesheet" href="assets/styles/css/main.css">
     <!-- loader -->
-    <!-- <link rel="stylesheet" href="assets/styles/css/loader.css"> -->
+    <link rel="stylesheet" href="assets/styles/css/loader.css">
+    <!-- overlay -->
+    <link rel="stylesheet" href="assets/styles/css/overlay.css">
     <!-- intro -->
     <link rel="stylesheet" href="assets/styles/css/intro.css">
+    <!-- parcours -->
+    <link rel="stylesheet" href="assets/styles/css/parcours.css">
 
     <!------------------------ JS ------------------------>
-    <script src="assets/js/loader.js" defer></script>
+    <script src="assets/js/main.js" defer></script>
+    <script src="assets/js/loader.js" defer></script> 
+    <script src="assets/js/cursor.js" defer></script>
     <script src="assets/js/scrollbar.js" defer></script>
 </head>
 <body>
-    <div class="loader-container enabled">
+    <!-- loader -->
+    <div class="loader-container disabled">
         <div class="loader disabled"></div>
     </div>
-    <div class="container">
-        <div class="intro">
-            <!-- header -->
-            <header>
-                <h2>Hector b.</h2>
-            </header>
-            <!-- intro -->
-            <div class="center">
-                <h1 class="title glitch" data-text="BONJOUR A TOUS" title="BONJOUR A TOUS">BONJOUR A TOUS</h1>
-                <p>Proin ac quam et lectus vestibulum bandit. Nunc maximus nibh at placerat 
-                    tincidunt. Nam sem lacus, ornare nonte sed, ultricies fringilla massa.
-                    <br><br>
-                    Sem risus tincidunt diam, vitae sodales diam ipsum vitae purus. Fusce tristique erat nulla, vel viverra mi auctor non. 
-                </p>
-                <button class="border white">Voir mes projets</button>
-            </div>
-            <!-- links -->
-            <div class="links">
-                <div class="scroll">
-                    <div class="line"></div>
-                    <p>scroll down</p>
-                </div>
-                <div class="socials">
 
-                </div>
-            </div>
-        </div>
+    <!-- cursor -->
+    <div class="cursor" id="circle"></div>
+    <div class="cursor" id="pointer"></div>
+
+    <!-- scrollbar -->
+    <div class="scrollbar-container">    
         <div class="scrollbar">
             <div id="top" class="line"></div>
             <i class="fas fa-arrow-down" id="scroll-arrow"></i>
             <div id="bottom" class="line"></div>
         </div>
+    </div>
+
+    <!-- header -->
+    <header>
+        <h2 id="main-title">Hector b.</h2>
+    </header>
+
+    <!-- intro links and scrolldown button -->
+    <div class="links">
+        <div class="scroll">
+            <div class="line"></div>
+            <p>scroll down</p>
+        </div>
+        <div class="socials">
+            <img src="assets/images/insta.png" alt="">
+            <img src="assets/images/mail.png" alt="">
+            <img src="assets/images/phone.png" alt="">
+        </div>
+    </div>
+
+    <!-- page content -->
+    <div class="container">
+
+        <!-- intro -->
+        <div class="intro">
+            <h1 class="title glitch" data-text="BONJOUR A TOUS" title="BONJOUR A TOUS">BONJOUR A TOUS</h1>
+            <p>Proin ac quam et lectus vestibulum bandit. Nunc maximus nibh at placerat 
+                    tincidunt. Nam sem lacus, ornare nonte sed, ultricies fringilla massa.
+                    <br><br>
+                    Sem risus tincidunt diam, vitae sodales diam ipsum vitae purus. Fusce tristique erat nulla, vel viverra mi auctor non. 
+            </p>
+            <a href="#parcours"><button class="border white">En savoir plus</button></a>
+        </div>
+
     </div>
 </body>
 </html>
