--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 </head>
 <body>
     <!-- loader -->
-    <div class="loader-container disabled">
-        <div class="loader disabled"></div>
+    <div class="loader-container enabled">
+        <div class="loader enabled"></div>
     </div>
 
     <!-- cursor -->
@@ -68,10 +68,8 @@
         <!-- intro -->
         <div class="intro">
             <h1 class="title glitch" data-text="BONJOUR A TOUS" title="BONJOUR A TOUS">BONJOUR A TOUS</h1>
-            <p>Proin ac quam et lectus vestibulum bandit. Nunc maximus nibh at placerat 
-                    tincidunt. Nam sem lacus, ornare nonte sed, ultricies fringilla massa.
-                    <br><br>
-                    Sem risus tincidunt diam, vitae sodales diam ipsum vitae purus. Fusce tristique erat nulla, vel viverra mi auctor non. 
+            <p>
+                Voici un petit site ou je me suis amusé à faire une scrollbar, un chargement au lancement du site et un curseur personnalisé. Cela n'est malheureusement pas fonctionnel sur mobile pour l'instant.
             </p>
             <a href="#parcours"><button class="border white">En savoir plus</button></a>
         </div>
