--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="links">
             <div class="scroll">
                 <div class="line"></div>
-                <p>scroll down</p>
+                <p>scroll up</p>
             </div>
             <div class="socials">
                 <img src="assets/images/insta.png" alt="">
@@ -72,7 +72,8 @@
                 <p>
                     Voici un petit site ou je me suis amusé à faire une scrollbar, un chargement au lancement du site et un curseur personnalisé. Cela n'est malheureusement pas fonctionnel sur mobile pour l'instant.
                 </p>
-                <a href="#parcours"><button class="border white">En savoir plus</button></a>
+                <br>
+                <p>Créé par <a href="http://hector-bidan.fr">Hector BIDAN</a></p>
             </div>
     
         </div>
